<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chessLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Chess">

    <Button
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="draw"
        android:text="@string/buton_draw_offer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="16dp"
        android:onClick="resign"
        android:text="@string/button_resign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/draw" />

    <TextView
        android:id="@+id/turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/turn_white"
        app:layout_constraintBottom_toTopOf="@+id/draw"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AI"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="76dp"
        android:onClick="ai"
        android:text="@string/button_AI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/turn" />

    <Button
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="undo"
        android:text="@string/button_undo"
        app:layout_constraintBottom_toTopOf="@+id/resign"
        app:layout_constraintStart_toEndOf="@+id/AI" />
</androidx.constraintlayout.widget.ConstraintLayout>